Multi button editing impossible to tell with color selectors #40534

Closed
opened 2014-06-08 02:08:29 +02:00 by gandalf3 · 15 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: testbuild2 (517094a)

Short description of error
Sliders in color selectors don't change when drag selected with multi button editing.

This actually goes for any of those kind of sliders (with the sort of progress bar look), but color selectors are the only place I could think of right away where multi button editing is useful, and those kinds of sliders are used.

Exact steps for others to reproduce the error

  1. Open blender
  2. Click on a color swatch
  3. Position the cursor over the red channel and depress LMB
  4. Move the cursor downwards. Nothing will seem to happen (though if you move the cursor not quite straight down, you might notice https://developer.blender.org/T40533)
  5. Release LMB. Depending on how far you moved the mouse, some or all of the channels will be "opened" for editing.
**System Information** Archlinux GTX 460 **Blender Version** Broken: testbuild2 (517094a) **Short description of error** Sliders in color selectors don't change when drag selected with multi button editing. This actually goes for any of those kind of sliders (with the sort of progress bar look), but color selectors are the only place I could think of right away where multi button editing is useful, and those kinds of sliders are used. **Exact steps for others to reproduce the error** 1. Open blender 2. Click on a color swatch 3. Position the cursor over the red channel and depress LMB 4. Move the cursor downwards. Nothing will seem to happen (though if you move the cursor not quite straight down, you might notice https://developer.blender.org/T40533) 5. Release LMB. Depending on how far you moved the mouse, some or all of the channels will be "opened" for editing.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

It's actually working for me (the same 517094a on Ubuntu 64bit) but if I'm using this multi channel feature on the "Dimensions" block for the default cube, only the X and Z values are changing.

It's actually working for me (the same 517094a on Ubuntu 64bit) but if I'm using this multi channel feature on the "Dimensions" block for the default cube, only the X and Z values are changing.

Added subscriber: @mont29

Added subscriber: @mont29

@totoro-4 "Dimension" issue is known (and reported somewhere), it’s complex to solve (due to how dimension works internally).

@gandalf3: can’t reproduce this with latest master either, color sliders behave like any other group (i.e. OK).

@totoro-4 "Dimension" issue is known (and reported somewhere), it’s complex to solve (due to how dimension works internally). @gandalf3: can’t reproduce this with latest master either, color sliders behave like any other group (i.e. OK).
Author
Member

The values change, but the appearance of the slider does not change visually (indicating that it is now selected) while dragging the cursor vertically.

This makes it hard to tell how many sliders are being selected while dragging vertically, as the mouse cursor is hidden by continuous grab.

The values change, but the appearance of the slider does not change visually (indicating that it is now selected) while dragging the cursor vertically. This makes it hard to tell how many sliders are being selected while dragging vertically, as the mouse cursor is hidden by continuous grab.
Member

@gandalf3: Are you using the default theme? What are the colors at your User Preferences - Themes tab - User Interface - Value slider section? The color for the selected slider is the "Inner selected" here.

@gandalf3: Are you using the default theme? What are the colors at your User Preferences - Themes tab - User Interface - Value slider section? The color for the selected slider is the "Inner selected" here.
Author
Member

@totoro-4 I'm using the default theme. The problem is when all the values are at 1, so that the inner selected color is not visible.

I would expect the item gradient to invert and the text turn white, like the first-clicked button, however it does not.

@totoro-4 I'm using the default theme. The problem is when all the values are at 1, so that the inner selected color is not visible. I would expect the *item* gradient to invert and the text turn white, like the first-clicked button, however it does not.
Member

@gandalf3: You're right, I understand now. :D It's because the text colors are not changing. I confirm this too.

@gandalf3: You're right, I understand now. :D It's because the text colors are not changing. I confirm this too.
Member

It's not easy to find a nice text color here. This is my attempt. @mont29, could you check it please?O_O
multiwidgettextcolor.diff

It's not easy to find a nice text color here. This is my attempt. @mont29, could you check it please?O_O [multiwidgettextcolor.diff](https://archive.blender.org/developer/F93630/multiwidgettextcolor.diff)
Campbell Barton was assigned by Bastien Montagne 2014-06-09 11:51:43 +02:00

Patch makes sense to me, but would rather let Campbell decide here.

Patch makes sense to me, but would rather let Campbell decide here.

This issue was referenced by 5b367c9aaf

This issue was referenced by 5b367c9aaf4fe61f3d1849ec2f74b5b01f770fc9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5b367c9aaf.

Closed by commit 5b367c9aaf.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40534
No description provided.