Fix T40534: Multi-button editing, hard to distinguish sliders